--- a/Task4/apz-pzpi-21-1-boichenko-matvii-task3/index.html
+++ b/Task4/apz-pzpi-21-1-boichenko-matvii-task3/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel='icon' type='image/svg+xml' href='/img/medmobile-logo.png' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, interactive-widget=resizes-content' />
+    <title>MedMobile</title>
+    <link href="https://fonts.cdnfonts.com/css/alright-sans" rel="stylesheet">
+<!--    <link href='https://fonts.cdnfonts.com/css/general-sans' rel='stylesheet'>-->
   </head>
   <body>
     <div id="root"></div>
